Bug 51410 - When switching from an identity without key to one with key, auto-signing fails
Summary: When switching from an identity without key to one with key, auto-signing fails
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: encryption (other bugs)
Version First Reported In: 1.5
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
: 88200 92893 (view as bug list)
Depends on:
Blocks:
 
Reported: 2002-12-01 23:30 UTC by Magnus von Koeller
Modified: 2009-08-05 21:46 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Magnus von Koeller 2002-12-01 23:30:41 UTC
Version:           1.5 (using KDE 3.1.1 (CVS >= 20021124))
Installed from:    compiled sources
Compiler:          gcc version 2.95.4 20011002 (Debian prerelease)
OS:          Linux (i686) release 2.4.17

I have multiple identities that use the same PGP key and I have one identity that does not have a PGP key assigned to it. I also use 'Automatically sign messages'.

Now, if I open a composer and try to send a message with the identity that doesn't have a PGP key assigned to it, KMail still tries to sign that message. If the OpenPGP plugin is selected, KMail complains that there is no key assigned to that identity. If I use inline PGP, it lets me enter the passphrase for the key assigned to the default identity.

Instead, KMail should simply not sign the message if there is no PGP key assigned to the currently selected identity. If I remember correctly, it used to work that way in KDE 3.0.x.
Comment 1 Ingo Klöcker 2002-12-02 23:10:32 UTC
Subject: Re:  New: Identities with/without an assigned PGP key confuse the composer

That's a feature of the OpenPGP plugin stuff. If you selected "Sign all 
message parts" then KMail will always try to sign all outgoing messages 
regardless of an assigned PGP key. Of course this doesn't make much 
sense but I didn't change it because Karl-Heinz seemed to have a reason 
to do it this way (Sphinx requirement?). As Sphinx is S/MIME only I 
will change this for OpenPGP.

Comment 2 Magnus von Koeller 2003-02-08 16:26:54 UTC
What's up with this bug? Shouldn't this be pretty easy to fix? My girlfriend is 
repeatedly confused by this... 
Comment 3 Thomas Vollmer 2003-04-24 21:43:58 UTC
My wife also ;-) She hates to disable signing/encryption everytime writing to their 
mailinglists. But we don't want to disable it in general, espacially for our private mails ;-) 
 
Thomas  
Comment 4 Till Adam 2004-07-18 18:15:34 UTC
This appears to work as expected in KMail 1.7 which will be part of KDE 3.3. When switching from an identity without a key to one with a key the state of the actions is not properly reset, though. I'll look into that.
Comment 5 Rob Kaper 2005-04-01 12:49:21 UTC
Reopening because of comment #4 which seems to have been forgotten, the composer still doesn't properly auto-sign when switching from a keyless identity to a key-owning identity with KDE PIM 3.4.
Comment 6 Martin Koller 2006-10-28 20:16:54 UTC
can confirm with KDE-3.5.5 as written in https://bugs.kde.org/show_bug.cgi?id=88200 when switching from a keyless identity to one with, the mail is not signed
Comment 7 Martin Koller 2006-10-28 20:17:18 UTC
*** Bug 88200 has been marked as a duplicate of this bug. ***
Comment 8 Thomas McGuire 2007-08-08 01:52:37 UTC
*** Bug 92893 has been marked as a duplicate of this bug. ***
Comment 9 Jaime Torres 2008-08-30 13:07:57 UTC
In 1.10.0 (kde 4.1) the allways sign messages does not make the sign message  option in the composing window to be enabled (having the identity keys or not), and the message is not signed unless the sign button (or option) is selected manually.
Comment 10 Michael Leupold 2008-11-09 17:54:41 UTC
Using KDE 4.1.2 I get the following when switching identities in the composer window.

1. Identity with key -> identity without key:
Sign button gets deselected, I'm not bugged about signing

2. Identity without key -> identity with key (and sign all option set):
Sign button stays disabled.

I'm not sure what the expected behaviour is.
Comment 11 Martin Koller 2009-08-01 11:05:08 UTC
I fixed it in trunk for KDE 4.4
Comment 12 Thomas McGuire 2009-08-05 21:46:45 UTC
SVN commit 1007465 by tmcguire:

Backport r1005418 by mkoller from trunk to the 4.3 branch:

CCBUG: 51410

Activate signing if switching from an identity without key to an
identity with key and auto-sign option is set,



 M  +8 -3      kmcomposewin.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1007465