BUG: 51410

Activate signing if switching from an identity without key to an
identity with key and auto-sign option is set,

svn path=/trunk/KDE/kdepim/; revision=1005418